--- a/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
+++ b/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
@@ -1377,47 +1377,47 @@ crow 这个字有两个意思，一个是鸡叫，一个是乌鸦。
 
 姥姥 1 号在加州发的信，也在 14 号收到。
 
-四十、谁在瞎忙？
+## 四十、谁在瞎忙？
 
 亲爱的小文：
 
-Mule是骡，mole是鼹鼠，也可写成偃鼠。中国古书里说“偃鼠饮河，不过满腹”，表示它的肚子容量很少。
+Mule 是骡，mole 是鼹鼠，也可写成偃鼠。中国古书里说“偃鼠饮河，不过满腹”，表示它的肚子容量很少。
 
-Mole的眼睛又小又瞎，只能看到有亮没亮，看不到东西，但它有一对非常能干的前脚，最会挖地洞，它把挖出来的土堆到地面，成为鼹鼠丘，也叫鼹鼠窝（molehill）。
+Mole 的眼睛又小又瞎，只能看到有亮没亮，看不到东西，但它有一对非常能干的前脚，最会挖地洞，它把挖出来的土堆到地面，成为鼹鼠丘，也叫鼹鼠窝（molehill）。
 
 有关鼹鼠造成的英文，都很好玩：
 
-Someoldmenareasblindasamole.（有些老头瞎得像鼹鼠。）
+Some old men are as blind as a mole.（有些老头瞎得像鼹鼠。）
 
-Argusathome,butamoleabroad.（在家看得清，出门瞎蒙蒙。）
+Argus at home, but a mole abroad.（在家看得清，出门瞎蒙蒙。）
 
-阿耳戈斯（Argus）是希腊神话中的百眼巨人。Argus-eyed就是眼光锐利的、机警的、警戒周到的。WebadlyneedanArgus-eyedjanitor.我们急需一个机警的看门的。
+阿耳戈斯（Argus）是希腊神话中的百眼巨人。Argus-eyed 就是眼光锐利的、机警的、警戒周到的。We badly need an Argus-eyed janitor. 我们急需一个机警的看门的。
 
-Whymakeamountainofamolehill?
+Why make a mountain of a molehill?
 
-山（mountain）当然比molehill大得多，所以这句的意思是：“为什么要大惊小怪呀？”“为什么要小题大做呀？”“为什么要言过其实呀？”
+山（mountain）当然比 molehill 大得多，所以这句的意思是：“为什么要大惊小怪呀？”“为什么要小题大做呀？”“为什么要言过其实呀？”
 
-Theypromisemountainsandperformmolehills.
+They promise mountains and perform molehills.
 
 承诺的是山，做出来的是鼹鼠窝。这是表示人不守信用的意味，有中文“说大话，使小钱”的意味。人间有很多人是这样的人，老拿空话骗人。英文这类意味的有很多：
 
-Hepromisesmuchandgiveslittle.（他答应的多，给出的少。）
+He promises much and gives little.（他答应的多，给出的少。）
 
-Amanapttopromise,isapttoforget.（容易答应容易忘。）
+A man apt to promise, is apt to forget.（容易答应容易忘。）
 
-Hewholightlypromisewillseldomkepthisword.（轻诺寡信。）
+He who lightly promise will seldom keep his word.（轻诺寡信。）
 
-Promisesdon'tfillthebelly.（好听的许愿填不饱肚子。）
+Promises don't fill the belly.（好听的许愿填不饱肚子。）
 
 鼹鼠整天做的是“地下活动”，忙得很，但不晓得在忙什么，有这么一句英文：
 
-amolehillman
+a molehill man
 
 意思就是假忙的人。中国名小说《红楼梦》的男主角贾宝玉说的“无事忙”，就是指这种意思。
 
-爸爸1974年8月22日
+爸爸 1974 年 8 月 22 日
 
-本月4号、10号、17号给你的信，你都收到了吗？胡伯伯6号、姥姥16号的信，昨天收到。
+本月 4 号、10 号、17 号给你的信，你都收到了吗？胡伯伯 6 号、姥姥 16 号的信，昨天收到。
 
 ## 四一、运动道德吗？
 
