--- a/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
+++ b/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
@@ -1423,21 +1423,21 @@ a molehill man
 
 亲爱的小文：
 
-扑克的英文是poker，若说成card也可以，说playingcard或playing-card也可以，但不能说成pokercard，说pokercard就是洋泾滨英文了。
+扑克的英文是poker，若说成card也可以，说playing card或playing-card也可以，但不能说成poker card，说poker card就是洋泾滨英文了。
 
 spade是铲子，poker有黑铲子样子的，也叫spade，中国叫黑桃，英文有成语
 
-Callaspadeaspade.（叫黑桃黑桃，黑桃就叫黑桃。）
+Call a spade a spade.（叫黑桃黑桃，黑桃就叫黑桃。）
 
-意思就是“是什么就说什么”、“该叫什么就叫什么”、“老实说”、“直言无隐”、“不拐弯抹角的说”。英文还有
+意思就是"是什么就说什么"、"该叫什么就叫什么"、"老实说"、"直言无隐"、"不拐弯抹角的说"。英文还有
 
-①Callingafigafigandatubatub.（叫无花果就是无花果，叫桶子就是桶子。）
+①Calling a fig a fig and a tub a tub.（叫无花果就是无花果，叫桶子就是桶子。）
 
-②Callingblack,black,andwhite,white.（黑的就叫黑的，白的就叫白的。黑就是黑，白就是白。）
+②Calling black, black, and white, white.（黑的就叫黑的，白的就叫白的。黑就是黑，白就是白。）
 
-如果该叫什么却不叫什么，就是“颠倒黑白”。中国有“指鹿为马”的故事，请姥姥讲给你听。莎士比亚剧本中有《驯悍记》（TheTamingoftheShrew），写丈夫驯服他那个凶老婆。指月亮叫太阳，凶老婆最后屈服，也跟着月亮叫太阳了。
+如果该叫什么却不叫什么，就是"颠倒黑白"。中国有"指鹿为马"的故事，请姥姥讲给你听。莎士比亚剧本中有《驯悍记》（The Taming of the Shrew），写丈夫驯服他那个凶老婆。指月亮叫太阳，凶老婆最后屈服，也跟着月亮叫太阳了。
 
-不该叫什么，反倒叫什么，就是“名不副实”（名字和实在的不符合）。孔夫子曾在《四书》里有一句话（《四书》里头有三书算是孔子作的，一书算是孟子作的，孟子就是孟伯伯的老老老老老老老老老老老老老老老（写累了，歇一会儿）老老老老老老……祖宗），那句话是
+不该叫什么，反倒叫什么，就是"名不副实"（名字和实在的不符合）。孔夫子曾在《四书》里有一句话（《四书》里头有三书算是孔子作的，一书算是孟子作的，孟子就是孟伯伯的老老老老老老老老老老老老老老老（写累了，歇一会儿）老老老老老老......祖宗），那句话是
 
 觚，不觚。觚哉？觚哉？
 
@@ -1449,9 +1449,9 @@ Callaspadeaspade.（叫黑桃黑桃，黑桃就叫黑桃。）
 
 胡子伯伯没有胡子。这还叫胡子伯伯吗？这还叫胡子伯伯吗？
 
-如果有的姑姑好，有的姑姑是坏蛋，那么坏蛋姑姑就会被孔夫子质问：“姑，不姑。姑哉？姑哉？”你说对不对？
+如果有的姑姑好，有的姑姑是坏蛋，那么坏蛋姑姑就会被孔夫子质问："姑，不姑。姑哉？姑哉？"你说对不对？
 
-英文中sportsman加有两个意思，一个是喜欢打猎的，一个是有运动道德的（运动道德就是堂堂正正对人公平竞争），但猎人对他们打的动物，并不合乎运动道德，所以漫画上鸭子才奇怪：为什么叫他们是sportsman？不是字典错了就是这些家伙自己叫错了。这也就是“姑不姑”的意思。哈哈。
+英文中sportsman加有两个意思，一个是喜欢打猎的，一个是有运动道德的（运动道德就是堂堂正正对人公平竞争），但猎人对他们打的动物，并不合乎运动道德，所以漫画上鸭子才奇怪：为什么叫他们是sportsman？不是字典错了就是这些家伙自己叫错了。这也就是"姑不姑"的意思。哈哈。
 
 爸爸1974年8月31日
 
