--- a/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
+++ b/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
@@ -1461,73 +1461,73 @@ Call a spade a spade.（叫黑桃黑桃，黑桃就叫黑桃。）
 
 亲爱的小文：
 
-9月22是你十岁的生日，爸爸上星期一，寄了一张生日卡给你，你收到了吗？
+9月22日是你十岁的生日，爸爸上星期一寄了一张生日卡给你，你收到了吗？
 
-有一位科学家，叫法拉第（MichaelFaraday），也是9月22生的，但他生在1791年，足足比你大173岁。你看到的电扇啦、抽风机啦、吸尘器啦、打蜡机啦……凡是里头有个嗡嗡响的，都一定有个会转的机器，这种机器，就叫电动机。电动机的原理，便是法拉第创设的。发电机也是电动机，没有发电机，电灯也不亮了，电视也看不到了……现在你知道法拉第是多么重要的人了吧？所以9月22，对人类说来，有一点光明的意思。
+有一位科学家，叫法拉第（Michael Faraday），也是9月22日生的，但他生在1791年，足足比你大173岁。你看到的电扇啦、抽风机啦、吸尘器啦、打蜡机啦……凡是里头有个嗡嗡响的，都一定有个会转的机器，这种机器就叫电动机。电动机的原理便是法拉第创设的。发电机也是电动机，没有发电机，电灯也不亮了，电视也看不到了……现在你知道法拉第是多么重要的人了吧？所以9月22日对人类说来，有一点光明的意思。
 
-有一位伟人，叫林肯，爸爸写信跟你提到过的。他在112年前的9月22，发布了解放美国黑奴的宣告（美国的黑人本来是奴隶，白人胜负他们，不把他们当人，在宪法上只把他们算做three-fifths（3／5）的人，还打他们，把他们卖来卖去），直到林肯出来，黑人才慢慢抬头。所以9月22，对人类说来，除有一点光明以外，还有一点自由的意思。
+有一位伟人叫林肯，爸爸写信跟你提到过的。他在112年前的9月22日发布了解放美国黑奴的宣告（美国的黑人本来是奴隶，白人奴役他们，不把他们当人，在宪法上只把他们算做 three-fifths（3/5）的人，还打他们，把他们卖来卖去），直到林肯出来，黑人才慢慢抬头。所以9月22日对人类说来，除有一点光明以外，还有一点自由的意思。
 
-所以，亲爱的小文，你生在9月22这一天，该多好呀！
+所以，亲爱的小文，你生在9月22日这一天，该多好呀！
 
-英文Manyhappyreturnsoftheday!就是万寿无疆的意思。return是转了一圈又回来的意思，一年转了365天，生日又到了。中国旧历算法是甲子（由甲乙丙丁戊已庚辛壬癸十个字和子丑寅卯辰巳午未申酉戌亥十二个字配）。全部配了一遍，共六十年。六十年后再由头来，所以一个人活了六十岁，就叫“还历”，也叫”花甲”。姥姥已过了花甲，你要想过花甲，还得等半个世纪——五十年。
+英文 Many happy returns of the day! 就是万寿无疆的意思。return 是转了一圈又回来的意思，一年转了365天，生日又到了。中国旧历算法是甲子（由甲乙丙丁戊己庚辛壬癸十个字和子丑寅卯辰巳午未申酉戌亥十二个字配）。全部配了一遍共六十年，六十年后再由头来，所以一个人活了六十岁就叫“还历”，也叫“花甲”。姥姥已过了花甲，你要想过花甲还得等半个世纪——五十年。
 
-你生的那年1964，中国旧历是甲辰年，所以你是属龙的。甲乙丙丁……等十个字叫“天干”，子丑寅卯……等十二个字叫“地支”，属什么的算法是跟着“地支”算的——
+你生的那年1964年，中国旧历是甲辰年，所以你是属龙的。甲乙丙丁……等十个字叫“天干”，子丑寅卯……等十二个字叫“地支”，属什么的算法是跟着“地支”算的——
 
-子鼠（rat）：子是11-1A.M.三更（不但年用地支，地支还表示时间。）
+子鼠（rat）：子是11-1点 三更（不但年用地支，地支还表示时间。）
 
-丑牛（ox）：丑是1-3A.M.四更
+丑牛（ox）：丑是1-3点 四更
 
-寅虎（tiger）：寅是3-5A.M.五更
+寅虎（tiger）：寅是3-5点 五更
 
-卯兔（hare）：卯是5-7A.M.天亮了
+卯兔（hare）：卯是5-7点 天亮了
 
-辰龙（dragon）辰是7-9A.M.（爸爸是辰时生的，所以小名叫安辰。）
+辰龙（dragon）：辰是7-9点（爸爸是辰时生的，所以小名叫安辰。）
 
-巳蛇（serpent）：巳是9-11A.M.上午
+巳蛇（serpent）：巳是9-11点 上午
 
-午马（horse）：午是11-1P.M.正午
+午马（horse）：午是11-13点 正午
 
-未羊（sheep）：未是1-3P.M.下午
+未羊（sheep）：未是13-15点 下午
 
-申猴（monkey）：申是3-5P.M.
+申猴（monkey）：申是15-17点
 
-酉鸡（cock）：酉是5-7P.M.
+酉鸡（cock）：酉是17-19点
 
-戌狗（dog）：戌是7-9P.M.初更
+戌狗（dog）：戌是19-21点 初更
 
-亥猪（pig）：亥是9-11P.M.二更
+亥猪（pig）：亥是21-23点 二更
 
-在外国也有这一类，叫做十二宫图（The12SignsoftheZodiac），就是假想把天上分成十二份，星星分到那一份就叫“XX座”——
+在外国也有这一类，叫做十二宫图（The 12 Signs of the Zodiac），就是假想把天上分成十二份，星星分到那一份就叫“XX座”——
 
-Aries就是公羊（Ram）等于子鼠，也叫白羊座。
+Aries 就是公羊（Ram）等于子鼠，也叫白羊座。
 
-Pisces就是鱼（Fishes）等于亥猪，也叫双鱼座。
+Pisces 就是鱼（Fishes）等于亥猪，也叫双鱼座。
 
-Aquarius就是挑水的（WaterBearer）等于戌狗，也叫宝瓶座。
+Aquarius 就是挑水的（Water Bearer）等于戌狗，也叫宝瓶座。
 
-Capricorn就是山羊（Goat）等于酉鸡，也叫摩羯座。
+Capricorn 就是山羊（Goat）等于酉鸡，也叫摩羯座。
 
-Sagittarius就是弓箭手（Archer）等于申猴，也叫人马座。
+Sagittarius 就是弓箭手（Archer）等于申猴，也叫人马座。
 
-Scorpio就是蝎子（Scorpion）等于未羊，也叫天蝎座。
+Scorpio 就是蝎子（Scorpion）等于未羊，也叫天蝎座。
 
-Libra就是天秤（Scales）等于午马，也叫天秤座。
+Libra 就是天秤（Scales）等于午马，也叫天秤座。
 
-Virgo就是处女（Virgin）等于巳蛇（中国人说蛇蝎美人，其实女人和蛇很近），也叫处女座。
+Virgo 就是处女（Virgin）等于巳蛇（中国人说蛇蝎美人，其实女人和蛇很近），也叫处女座。
 
-Leo就是狮子（Lion）等于辰龙，也叫狮子座。
+Leo 就是狮子（Lion）等于辰龙，也叫狮子座。
 
-Cancer就是螃蟹（Crab）等于卯免，也叫巨蟹座。
+Cancer 就是螃蟹（Crab）等于卯兔，也叫巨蟹座。
 
-Gemini就是双胞胎（Twins）等于寅虎，也叫双子座。
+Gemini 就是双胞胎（Twins）等于寅虎，也叫双子座。
 
-Taurus就是公牛（Bull）正巧等于丑牛，也叫金牛座。
+Taurus 就是公牛（Bull）正巧等于丑牛，也叫金牛座。
 
-人马座里的半人半马（halfhorse，halfman）的怪物叫森陶尔（Centaur），所以人马座也叫Centaur，这些半人半马的怪物是希腊神话里的角色。有一个有名的Centaur叫Nessus，被大力士Hercules射了一毒箭，但他临死前安排了一条秘计，借Hercules老婆之手，害死了Hercules。将来你看《三国演义》看“死诸葛（诸葛亮）走生仲达（司马懿）”那一章，也可看到这类好玩的故事
+人马座里的半人半马（half horse, half man）的怪物叫森陶尔（Centaur），所以人马座也叫 Centaur，这些半人半马的怪物是希腊神话里的角色。有一个有名的 Centaur 叫 Nessus，被大力士 Hercules 射了一毒箭，但他临死前安排了一条秘计，借 Hercules 老婆之手害死了 Hercules。将来你看《三国演义》看“死诸葛（诸葛亮）走生仲达（司马懿）”那一章，也可看到这类好玩的故事。
 
-由姥姥转你十五元美金做生日礼金。请姥姥讲己已巳戊戍戌的分别和念法。
+由姥姥转你十五元美金做生日礼金。请姥姥讲己巳巳戊戌戌的分别和念法。
 
-爸爸1974年9月14日
+爸爸 1974年9月14日
 
 你6日信11日收到。
 
