--- a/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
+++ b/08.书信函件类/坐牢家爸爸给女儿的八十封信.md
@@ -1535,33 +1535,33 @@ Taurus 就是公牛（Bull）正巧等于丑牛，也叫金牛座。
 
 亲爱的小文：
 
-你十八、十九两封信25号收到，你和姥姥在林肯纪念堂的照相，姥姥照得很年轻，看起来四十多岁，你照得似笑非笑，非常可爱。你们背后的林肯，他的妈妈的妈妈和爸爸，没有结婚就生了她，这样的小孩都特别聪明，所以林肯的聪明，也受了他妈妈的影响，虽然他妈妈死的时候，他还不到十岁（notyettenyearsold）。
+你十八、十九两封信25号收到，你和姥姥在林肯纪念堂的照相，姥姥照得很年轻，看起来四十多岁，你照得似笑非笑，非常可爱。你们背后的林肯，他的妈妈的妈妈和爸爸，没有结婚就生了她，这样的小孩都特别聪明，所以林肯的聪明，也受了他妈妈的影响，虽然他妈妈死的时候，他还不到十岁（not yet ten years old）。
 
 林肯一辈子所受的教育不到一年，他家里太穷了，但他刻苦读书，最后能说出写出非常巧妙的英文（但他写的英文字，始终很蹩脚）。
 
-英文中笑的字很多，最普通的是smile，是微笑、笑眯昧的意思，比较斯文。有时是快乐的笑，有时是特别的，所以要注意它前面的形容词，才能决定是那种笑：
+英文中笑的字很多，最普通的是smile，是微笑、笑眯眯的意思，比较斯文。有时是快乐的笑，有时是特别的，所以要注意它前面的形容词，才能决定是那种笑：
 
-Thereisapleasantsmileonherface.（她面露悦色。）
+There is a pleasant smile on her face.（她面露悦色。）
 
-Thereisaironicalsmileonherface.（她做讥讽之笑。）
+There is an ironical smile on her face.（她做讥讽之笑。）
 
-Shegivesawrysmile.（她苦笑。）（abittersmile也是苦笑）
+She gives a wry smile.（她苦笑。）（a bitter smile也是苦笑）
 
-Hesmiledagrimsmile.（他狞笑。）
+He smiled a grim smile.（他狞笑。）
 
 中文成语也有：
 
-笑面虎awickedpersonwithahypocriticalsmile
+笑面虎 a wicked person with a hypocritical smile
 
-笑里藏刀asmileoftreachery或concealadaggerbehindasmile
+笑里藏刀 a smile of treachery 或 conceal a dagger behind a smile
 
-英文中也有笑里藏刀的意思，爸爸看到过一句Awomanwilllaughinyourfaceandcutyourthroat。另有莎士比亚的Macbeth悲剧里看到There'sdaggersinmen'ssmiles，跟中文的成语不谋而合。
+英文中也有笑里藏刀的意思，爸爸看到过一句 A woman will laugh in your face and cut your throat。另有莎士比亚的 Macbeth 悲剧里看到 There's daggers in men's smiles，跟中文的成语不谋而合。
 
-英文中另有一个笑的字是laugh，笑的程度比smile重，有一句英文正好写出它跟smile的不同：Avulgaroftenlaugh,butneversmile；whereaswell-bredpeopleoftensmile,butseldomlaugh．意思是凡夫俗子常大笑，从不微笑；有教养的人常微笑，很少大笑。
+英文中另有一个笑的字是laugh，笑的程度比smile重，有一句英文正好写出它跟smile的不同：A vulgar often laugh, but never smile；whereas well-bred people often smile, but seldom laugh。意思是凡夫俗子常大笑，从不微笑；有教养的人常微笑，很少大笑。
 
-中文中还有一句成语叫“啼笑皆非”，就是“哭笑不得”的意思，等于英文的betweentearsandlaughter，林肯竞选参议员失败了，人家问他感觉，他说：IsupposethatIfeelverymuchliketheovergrownboywhostumpedhistoe.（很像大孩子的脚趾头给撞疼了。）人家又问这是什么意思？（Howwasthat？）他解释道：Well,whensomeoneaskedhimhowhefelt,hesaidthathewashurttoobadtolaughandwastoobigtocry.（人家问他有什么感觉，他说他疼得没法笑，又年纪大得不好意思哭。）这是一句很巧妙的英文，小文你要把它背下来。
+中文中还有一句成语叫“啼笑皆非”，就是“哭笑不得”的意思，等于英文的 between tears and laughter，林肯竞选参议员失败了，人家问他感觉，他说：I suppose that I feel very much like the overgrown boy who stumped his toe.（很像大孩子的脚趾头给撞疼了。）人家又问这是什么意思？（How was that？）他解释道：Well, when someone asked him how he felt, he said that he was hurt too bad to laugh and was too big to cry.（人家问他有什么感觉，他说他疼得没法笑，又年纪大得不好意思哭。）这是一句很巧妙的英文，小文你要把它背下来。
 
-爸爸1974年9月27日
+爸爸 1974年9月27日
 
 亲爱的小文：
 
@@ -1571,25 +1571,25 @@ Hesmiledagrimsmile.（他狞笑。）
 
 有一种跟橡树很像的树，叫栗树，叫chestnut，结出来的就是栗子，也叫chestnut。chest是箱子，nut是核中果子，你在台北市可以买到糖炒栗子，就可以吃到箱子里的果子，很好吃。
 
-栗树是很好看的树（ahandsometree），木头可以做成木板和造纸。生命力很强，根死了还会长一阵子，这叫做“虽死犹生”。
+栗树是很好看的树（a handsome tree），木头可以做成木板和造纸。生命力很强，根死了还会长一阵子，这叫做“虽死犹生”。
 
-一个故事说猴子（monkey）要吃火里面的栗子，可是自己伯烫，就骗猫去代它拿，猫伸手去拿（就是猫脚爪cat'spaw），结果给烫了，于是出来一句英文成语，叫：
+一个故事说猴子（monkey）要吃火里面的栗子，可是自己怕烫，就骗猫去代它拿，猫伸手去拿（就是猫脚爪 cat's paw），结果给烫了，于是出来一句英文成语，叫：
 
-火中取栗Pullchestnutsfromfire．或Topulloutthechestnutswiththecat'spaw
+火中取栗 Pull chestnuts from fire。或 To pull out the chestnuts with the cat's paw
 
 因为猫被猴子利用了，做了傻瓜、做了瘟生、做了傀儡，所以：
 
-Tomakeacat's-pawofaperson
+To make a cat's-paw of a person
 
-就是利用某人的意思。cat's-paworcats-paw——apersonusedbyanothertodosomethingunpleasantordangerous.
+就是利用某人的意思。cat's-paw or cats-paw —— a person used by another to do something unpleasant or dangerous.
 
-另有一种跟栗树一类的树，结出来的栗子大，以前用来喂马（horse），所以叫horse-chestnut，中文叫做七叶树（叶子有七片）。horse-chestnut,1.alargeshadetreehavingspreadingbranches,largeleaves,clustersofshowy,whiteflowers,andglossy,brownnutsresemblingchestnuts.2.thenut.3.anytreeorshrutofthesamefamilyasthehorsechestnut.horse-chestnut这个字若反过来，成为chestnuthorse，就变成栗色马。
+另有一种跟栗树一类的树，结出来的栗子大，以前用来喂马（horse），所以叫 horse-chestnut，中文叫做七叶树（叶子有七片）。horse-chestnut, 1. a large shade tree having spreading branches, large leaves, clusters of showy, white flowers, and glossy, brown nuts resembling chestnuts. 2. the nut. 3. any tree or shrub of the same family as the horse chestnut. horse-chestnut 这个字若反过来，成为 chestnut horse，就变成栗色马。
 
-林肯跟道格拉斯（StephenA.Douglas）辩论的时候（1858年竞选参议员theU.S.——Senate），林肯挖苦Douglas胡说八通，说他Amancanproveahorse-chestnuttobeachestnuthorse.（一个想把七叶树证明是栗色马的人）。
+林肯跟道格拉斯（Stephen A. Douglas）辩论的时候（1858年竞选参议员 the U.S. Senate），林肯挖苦 Douglas 胡说八通，说他 A man can prove a horse-chestnut to be a chestnut horse.（一个想把七叶树证明是栗色马的人）。
 
 你的成绩单影本和六页剪贴都收到了，爸爸很高兴你有这么好的成绩、这么快的进步。
 
-爸爸1975年2月15日
+爸爸 1975年2月15日
 
 爸爸因为不过旧历年，所以没特别送你什么。但你的钢琴，短期内爸爸一定为你买到。
 
